[tool.poetry]
name = "sms2slack-v2"
version = "1.0.0"
description = ""
authors = ["Janez Troha <jt@niteo.co>"]

[tool.poetry.dependencies]
python = "^3.9"
esphome = "^2022.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
